# spine

./: .gitignore  Cargo.toml  README.md  TODO.md  ideas.md  rustfmt.toml  test.spine
cli/: Cargo.toml
cli/src/: cmd_line.rs  main.rs
compiler/: Cargo.toml
compiler/src/: asm.rs  asm_test.rs  elf.rs  err.rs  high.rs  high_asm.rs  high_to_low.rs  highasm.rs  highasm_test.rs  imm.rs  keywords.rs  lang.rs  lang_test.rs  lib.rs  low.rs  low_to_highasm.rs  parse_to_high.rs  src.rs  src_to_tokens.rs  tokens.rs  tokens_to_high.rs  x86_64.rs  x86_64_to_binary.rs
language_server/: Cargo.toml
language_server/src/: lib.rs
src/: asm.rs  asm_test.rs  elf.rs  imm.rs  lang.rs  lang_test.rs  lsp.rs  main.rs
vscode-extension/spine-lang/: README.md  language-configuration.json  package-lock.json  package.json  spine-lang-0.0.1.vsix  spine.tmGrammar.json
vscode-extension/spine-lang/src/: extension.ts
