[package]
name = "spine"
version = "0.1.0"
description = "Spine lang compiler and tooling"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Anima <anim.libera@gmail.com>"]

[features]
default = ["lsp"]
lsp = ["dep:serde_json", "dep:tokio", "dep:tower-lsp"]

[dependencies]
serde_json = { version = "1.0.133", optional = true }
tokio = { version = "1.41.1", features = ["full"], optional = true }
tower-lsp = { version = "0.20.0", optional = true }
