[package]
name = "spine_language_server"
version = "0.1.0"
description = "Spine language server"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["Anima <anim.libera@gmail.com>"]

[dependencies]
spine_compiler = {path = "../compiler"}
serde_json = { version = "1.0.149" }
tokio = { version = "1.49.0", features = ["full"] }
tower-lsp-server = { version = "0.23.0" }
